<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:id="@+id/parent_layout">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/testImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/beerName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/testImage"
        android:text="@string/beerName_hint"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/breweryName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/beerName_textView"
        android:layout_marginStart="30dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/testImage"
        android:text="@string/breweryName_hint" />

    <TextView
        android:id="@+id/beerType_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/breweryName_textView"
        android:layout_marginStart="30dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/testImage"
        android:text="@string/beerType_hint"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/dash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/breweryName_textView"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/beerType_textView"
        android:text="@string/dash" />

    <TextView
        android:id="@+id/abv_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/breweryName_textView"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/dash"
        android:text="@string/aBv_hint"
        android:textStyle="italic" />

</RelativeLayout>